bugfixes opf and xhtml docs performance improvement saving book, write opf file and ncx file only one